modified:   CSE--24/DevROHIT/27sep2025.html 	new file:   CSE--24/Table.html

--- a/CSE--24/DevROHIT/27sep2025.html
+++ b/CSE--24/DevROHIT/27sep2025.html
@@ -38,9 +38,10 @@
    <video  src="/video.mp4"   controls></video>
 
    <h2><Link></h2>
-    <a href="https://www.google.com/search?q=chess&oq=&gs_lcrp=EgZjaHJvbWUqCQgAECMYJxjqAjIJCAAQIxgnGOoCMgkIARAjGCcY6gIyCQgCECMYJxjqAjIJCAMQIxgnGOoCMgkIBBAuGCcY6gIyCQgFECMYJxjqAjIJCAYQIxgnGOoCMgkIBxAjGCcY6gLSAQ02ODQ5NDYwMzlqMGo3qAIIsAIB8QUIVGQaSgd4-vEFCFRkGkoHePo&sourceid=chrome&ie=UTF-8" target="_blank">go to chess</a>
+    <a href="https://www.google.com/search?q=chess&oq=&gs_lcrp=EgZjaHJvbWUqCQgAECMYJxjqAjIJCAAQIxgnGOoCMgkIARAjGCcY6gIyCQgCECMYJxjqAjIJCAMQIxgnGOoCMgkIBBAuGCcY6gIyCQgFECMYJxjqAjIJCAYQIxgnGOoCMgkIBxAjGCcY6gLSAQ02ODQ5NDYwMzlqMGo3qAIIsAIB8QUIVGQaSgd4-vEFCFRkGkoHePo&sourceid=chrome&ie=UTF-8" target="_block">go to chess</a>
 
-
+<p style="background: green";> yeh ek paragraph </p>
+ <div style ="background: lightblue;"> yeh ek DIV (Block Element) hai </div>
 
 
 
